2013-01-18  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/decNumber.c (decSetSubnormal): Remove unused variable.
	* strtod32.c (strtod32): Likewise.

2013-01-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/soft-dfp/dpd/numdigits.h (getexp): Simplify code and fix
	issues exp is DECIMAL_BIAS;

2013-01-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/isfinited32.c (__finited32d): Change implementation to
	follow isinf and isnan by checking the bits directly.
	* sysdeps/powerpc/dfpu/is_template.h (__isfinite32d): Simplify
	implemenation by checking the cr0 results using C instead of assembly.
	* tests/test-isfinite.c: Unify tests by removing negative results for
	PowerPC HD DFP.

2013-01-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/isinfd32.c (__isinfd32): Return -1 for minus infinity and
	+1 for plus infinity.
	* sysdeps/powerpc/dfpu/isinfd128.c (__isinfd128): Use the isinfd32.c
	implementation instead of the is_template.h.
	* sysdeps/powerpc/dfpu/isinfd32.c (__isinfd32): Simplify
	implementation by checking cr1 result and result -1 for minus infinity
	and +1 for plus infinity.
	* tests/test-isinf.c: Add check for minux infinity.

2013-01-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfptypeconv.c (___host_to_ieee_32): Fix endian macro check.
	(___host_to_ieee_64): Likewise.
	(___host_to_ieee_128): Likewise.
	(___ieee_32_to_host): Likewise.
	(___ieee_64_to_host): Likewise.
	(___ieee_128_to_host): Likewise.
	* ieee754r/fpclassifyd32.c (fpclassify): Likewise.
	* ieee754r/isinfd32.c (isinf): Likewise.
	* ieee754r/isnand32.c (isnan): Likewise.

2013-01-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* config.guess: Add powerpc LE support.
	* configure.ac: Likewise.
	* scripts/config.guess: Likewise.
	* configure: Likewise.
	* sysdeps/powerpc/powerpc64/sysdep.h: Sync with GLIBC one for powerpc
	LE support.

2012-09-12  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
