@@ -1,7 +1,7 @@
 /* Handle conversion from Decimal64 to binary long double (128)
 
    Copyright (C) 2007, 2008 IBM Corporation.
-   Copyright (C) 2008, 2009 Free Software Foundation, Inc.
+   Copyright (C) 2008-2014 Free Software Foundation, Inc.
 
    This file is part of the Decimal Floating Point C Library.
 
@@ -39,7 +39,7 @@ extern _Decimal64 __extenddfdd (double);
 
 CONVERT_WRAPPER(
 // extendddtf, trunctdtf
-	double df_part1, df_part2;
+	volatile double df_part1, df_part2;
 	SRC_TYPE dd_part1, dd_part2;
 
 	df_part1 = a;			/* TD -> DF  */
