@@ -1,7 +1,7 @@
 /* Handle conversion from Decimal32 to binary long double (128)
 
    Copyright (C) 2007, 2008 IBM Corporation.
-   Copyright (C) 2008, 2009 Free Software Foundation, Inc.
+   Copyright (C) 2008-2014 Free Software Foundation, Inc.
 
    This file is part of the Decimal Floating Point C Library.
 
@@ -38,7 +38,7 @@ extern _Decimal32 __truncdfsd (double);
 #include "convert.h"
 
 CONVERT_WRAPPER(
-	double df_part1, df_part2;
+	volatile double df_part1, df_part2;
 	_Decimal32 sd_part1, sd_part2;
 
 	df_part1 = a;			/* TD -> DF  */
